tests/dividebyzero.out
Error in /home/aske/ips/af/GroupProject/fasto/bin/../tests/dividebyzero.asm line 30: Runtime exception at 0x00400048: break instruction executed; no code given.

Processing terminated due to errors.

